removed dupl tag

--- a/config.toml
+++ b/config.toml
@@ -6,8 +6,6 @@ theme = "frank"
 
 MetaDataFormat = "yaml"
 DefaultContentLanguage = "nl"
-SectionPagesMenu = "main"
-googleAnalytics = ""
-enableRobotsTXT = false
+SectionPagesMenu = "main"enableRobotsTXT = false
 background_color_class = "white"
 googleAnalytics = "UA-110086332-1"
